syntax = "proto3";

option go_package = "github.com/DuarteMRAlves/maestro/api/pb";

package pb;

import "google/protobuf/empty.proto";

service LinkManagement {
  rpc Create(CreateLinkRequest) returns (google.protobuf.Empty);
  rpc Get(GetLinkRequest) returns (stream Link);
}

message CreateLinkRequest {
  string name = 1;
  string sourceStage = 2;
  string sourceField = 3;
  string targetStage = 4;
  string targetField = 5;
}

message GetLinkRequest {
  string name = 1;
  string sourceStage = 2;
  string sourceField = 3;
  string targetStage = 4;
  string targetField = 5;
}

message Link {
  string name = 1;
  string sourceStage = 2;
  string sourceField = 3;
  string targetStage = 4;
  string targetField = 5;
}